--- a/package.json5
+++ b/package.json5
@@ -15,7 +15,7 @@
     // rollup
     "rollup": "rollup --config \"./scripts/rollup.config.js\"",
     "rollup:build": "pnpm rollup",
-    "rollup:watch": "pnpm rollup --watch",
+    "rollup:watch": "pnpm rollup --watch --waitForBundleInput",
 
     // prettier
     "prettier": "prettier --config \"./prettier.config.js\" --ignore-unknown --write",
@@ -31,6 +31,14 @@
 
     // other
     "clean": "rimraf \"./dist\""  ,
+    "serve": "browser-sync start \
+      --server './public' \
+      --files '**/*.(html|css|js)' \
+      --port 4000 \
+      --open \"http://localhost:4000/\"\
+      --no-ui \
+      --no-notify",
+//    --browser "google chrome"
 
     // utils
     "json": "json5 --validate \"./package.json5\" && \
@@ -57,7 +65,7 @@
     "rollup-plugin-terser": "^7.0.2", // js
     "rollup-plugin-analyzer": "^4.0.0",
     "@svgr/rollup": "^6.2.1",
-//    "@rollup/plugin-url": "^7.0.0",
+    // "@rollup/plugin-url": "^7.0.0",
 
     // storybook
     "@storybook/react": "^6.4.22",
@@ -84,6 +92,7 @@
 
     // types
     "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
 
     // css/scss
     "autoprefixer": "^10.4.7",
@@ -102,11 +111,13 @@
     "json5": "^2.2.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "browser-sync": "^2.27.9",
     "gh-pages": "^4.0.0",
 
     // libs (peer deps)
     "react": "^18.1.0", // used in UI library
     "react-dom": "^17.0.2", // need for storybook (exact from 17 and above, not 18)
+    "react-dom18": "npm:react-dom@^18.1.0", // need for storybook (exact from 17 and above, not 18)
     "classnames": "^2.3.1"
   },
   "dependencies": {},
